--- a/1 - Strings.ipynb
+++ b/1 - Strings.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -189,9 +189,8 @@
        "10"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -258,9 +257,8 @@
        "10"
       ]
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -271,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -280,9 +278,8 @@
        "\"How many cats is too many cats?\""
       ]
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -327,9 +324,8 @@
        "\"How many cats is too many cats?\""
       ]
      },
-     "execution_count": 13,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -348,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -360,12 +356,44 @@
      "solution": true
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"hihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihi\" ⋯ 1460 bytes ⋯ \"hihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihi\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "hi = \"hi\"^1000\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"hihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihi\" ⋯ 1460 bytes ⋯ \"hihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihi\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "hi = repeat(\"hi\", 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -406,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -418,8 +446,24 @@
      "solution": true
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"7\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a = 3\n",
+    "b = 4\n",
+    "\n",
+    "c = string(a,\" + \",b)\n",
+    "d = string(a+b)"
+   ]
   },
   {
    "cell_type": "code",
@@ -443,19 +487,295 @@
     "@assert c == \"3 + 4\"\n",
     "@assert d == \"7\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{verbatim}\n",
+       "repeat(A::AbstractArray, counts::Integer...)\n",
+       "\\end{verbatim}\n",
+       "Construct an array by repeating array \\texttt{A} a given number of times in each dimension, specified by \\texttt{counts}.\n",
+       "\n",
+       "See also: \\href{@ref}{\\texttt{fill}}, \\href{@ref}{\\texttt{Iterators.repeated}}, \\href{@ref}{\\texttt{Iterators.cycle}}.\n",
+       "\n",
+       "\\section{Examples}\n",
+       "\\begin{verbatim}\n",
+       "julia> repeat([1, 2, 3], 2)\n",
+       "6-element Vector{Int64}:\n",
+       " 1\n",
+       " 2\n",
+       " 3\n",
+       " 1\n",
+       " 2\n",
+       " 3\n",
+       "\n",
+       "julia> repeat([1, 2, 3], 2, 3)\n",
+       "6×3 Matrix{Int64}:\n",
+       " 1  1  1\n",
+       " 2  2  2\n",
+       " 3  3  3\n",
+       " 1  1  1\n",
+       " 2  2  2\n",
+       " 3  3  3\n",
+       "\\end{verbatim}\n",
+       "\\begin{verbatim}\n",
+       "repeat(A::AbstractArray; inner=ntuple(Returns(1), ndims(A)), outer=ntuple(Returns(1), ndims(A)))\n",
+       "\\end{verbatim}\n",
+       "Construct an array by repeating the entries of \\texttt{A}. The i-th element of \\texttt{inner} specifies the number of times that the individual entries of the i-th dimension of \\texttt{A} should be repeated. The i-th element of \\texttt{outer} specifies the number of times that a slice along the i-th dimension of \\texttt{A} should be repeated. If \\texttt{inner} or \\texttt{outer} are omitted, no repetition is performed.\n",
+       "\n",
+       "\\section{Examples}\n",
+       "\\begin{verbatim}\n",
+       "julia> repeat(1:2, inner=2)\n",
+       "4-element Vector{Int64}:\n",
+       " 1\n",
+       " 1\n",
+       " 2\n",
+       " 2\n",
+       "\n",
+       "julia> repeat(1:2, outer=2)\n",
+       "4-element Vector{Int64}:\n",
+       " 1\n",
+       " 2\n",
+       " 1\n",
+       " 2\n",
+       "\n",
+       "julia> repeat([1 2; 3 4], inner=(2, 1), outer=(1, 3))\n",
+       "4×6 Matrix{Int64}:\n",
+       " 1  2  1  2  1  2\n",
+       " 1  2  1  2  1  2\n",
+       " 3  4  3  4  3  4\n",
+       " 3  4  3  4  3  4\n",
+       "\\end{verbatim}\n",
+       "\\begin{verbatim}\n",
+       "repeat(s::AbstractString, r::Integer)\n",
+       "\\end{verbatim}\n",
+       "Repeat a string \\texttt{r} times. This can be written as \\texttt{s\\^{}r}.\n",
+       "\n",
+       "See also \\href{@ref :^(::Union{AbstractString, AbstractChar}, ::Integer)}{\\texttt{\\^{}}}.\n",
+       "\n",
+       "\\section{Examples}\n",
+       "\\begin{verbatim}\n",
+       "julia> repeat(\"ha\", 3)\n",
+       "\"hahaha\"\n",
+       "\\end{verbatim}\n",
+       "\\begin{verbatim}\n",
+       "repeat(c::AbstractChar, r::Integer) -> String\n",
+       "\\end{verbatim}\n",
+       "Repeat a character \\texttt{r} times. This can equivalently be accomplished by calling \\href{@ref :^(::Union{AbstractString, AbstractChar}, ::Integer)}{\\texttt{c\\^{}r}}.\n",
+       "\n",
+       "\\section{Examples}\n",
+       "\\begin{verbatim}\n",
+       "julia> repeat('A', 3)\n",
+       "\"AAA\"\n",
+       "\\end{verbatim}\n"
+      ],
+      "text/markdown": [
+       "```\n",
+       "repeat(A::AbstractArray, counts::Integer...)\n",
+       "```\n",
+       "\n",
+       "Construct an array by repeating array `A` a given number of times in each dimension, specified by `counts`.\n",
+       "\n",
+       "See also: [`fill`](@ref), [`Iterators.repeated`](@ref), [`Iterators.cycle`](@ref).\n",
+       "\n",
+       "# Examples\n",
+       "\n",
+       "```jldoctest\n",
+       "julia> repeat([1, 2, 3], 2)\n",
+       "6-element Vector{Int64}:\n",
+       " 1\n",
+       " 2\n",
+       " 3\n",
+       " 1\n",
+       " 2\n",
+       " 3\n",
+       "\n",
+       "julia> repeat([1, 2, 3], 2, 3)\n",
+       "6×3 Matrix{Int64}:\n",
+       " 1  1  1\n",
+       " 2  2  2\n",
+       " 3  3  3\n",
+       " 1  1  1\n",
+       " 2  2  2\n",
+       " 3  3  3\n",
+       "```\n",
+       "\n",
+       "```\n",
+       "repeat(A::AbstractArray; inner=ntuple(Returns(1), ndims(A)), outer=ntuple(Returns(1), ndims(A)))\n",
+       "```\n",
+       "\n",
+       "Construct an array by repeating the entries of `A`. The i-th element of `inner` specifies the number of times that the individual entries of the i-th dimension of `A` should be repeated. The i-th element of `outer` specifies the number of times that a slice along the i-th dimension of `A` should be repeated. If `inner` or `outer` are omitted, no repetition is performed.\n",
+       "\n",
+       "# Examples\n",
+       "\n",
+       "```jldoctest\n",
+       "julia> repeat(1:2, inner=2)\n",
+       "4-element Vector{Int64}:\n",
+       " 1\n",
+       " 1\n",
+       " 2\n",
+       " 2\n",
+       "\n",
+       "julia> repeat(1:2, outer=2)\n",
+       "4-element Vector{Int64}:\n",
+       " 1\n",
+       " 2\n",
+       " 1\n",
+       " 2\n",
+       "\n",
+       "julia> repeat([1 2; 3 4], inner=(2, 1), outer=(1, 3))\n",
+       "4×6 Matrix{Int64}:\n",
+       " 1  2  1  2  1  2\n",
+       " 1  2  1  2  1  2\n",
+       " 3  4  3  4  3  4\n",
+       " 3  4  3  4  3  4\n",
+       "```\n",
+       "\n",
+       "```\n",
+       "repeat(s::AbstractString, r::Integer)\n",
+       "```\n",
+       "\n",
+       "Repeat a string `r` times. This can be written as `s^r`.\n",
+       "\n",
+       "See also [`^`](@ref :^(::Union{AbstractString, AbstractChar}, ::Integer)).\n",
+       "\n",
+       "# Examples\n",
+       "\n",
+       "```jldoctest\n",
+       "julia> repeat(\"ha\", 3)\n",
+       "\"hahaha\"\n",
+       "```\n",
+       "\n",
+       "```\n",
+       "repeat(c::AbstractChar, r::Integer) -> String\n",
+       "```\n",
+       "\n",
+       "Repeat a character `r` times. This can equivalently be accomplished by calling [`c^r`](@ref :^(::Union{AbstractString, AbstractChar}, ::Integer)).\n",
+       "\n",
+       "# Examples\n",
+       "\n",
+       "```jldoctest\n",
+       "julia> repeat('A', 3)\n",
+       "\"AAA\"\n",
+       "```\n"
+      ],
+      "text/plain": [
+       "\u001b[36m  repeat(A::AbstractArray, counts::Integer...)\u001b[39m\n",
+       "\n",
+       "  Construct an array by repeating array \u001b[36mA\u001b[39m a given number of times in each\n",
+       "  dimension, specified by \u001b[36mcounts\u001b[39m.\n",
+       "\n",
+       "  See also: \u001b[36mfill\u001b[39m, \u001b[36mIterators.repeated\u001b[39m, \u001b[36mIterators.cycle\u001b[39m.\n",
+       "\n",
+       "\u001b[1m  Examples\u001b[22m\n",
+       "\u001b[1m  ≡≡≡≡≡≡≡≡≡≡\u001b[22m\n",
+       "\n",
+       "\u001b[36m  julia> repeat([1, 2, 3], 2)\u001b[39m\n",
+       "\u001b[36m  6-element Vector{Int64}:\u001b[39m\n",
+       "\u001b[36m   1\u001b[39m\n",
+       "\u001b[36m   2\u001b[39m\n",
+       "\u001b[36m   3\u001b[39m\n",
+       "\u001b[36m   1\u001b[39m\n",
+       "\u001b[36m   2\u001b[39m\n",
+       "\u001b[36m   3\u001b[39m\n",
+       "\u001b[36m  \u001b[39m\n",
+       "\u001b[36m  julia> repeat([1, 2, 3], 2, 3)\u001b[39m\n",
+       "\u001b[36m  6×3 Matrix{Int64}:\u001b[39m\n",
+       "\u001b[36m   1  1  1\u001b[39m\n",
+       "\u001b[36m   2  2  2\u001b[39m\n",
+       "\u001b[36m   3  3  3\u001b[39m\n",
+       "\u001b[36m   1  1  1\u001b[39m\n",
+       "\u001b[36m   2  2  2\u001b[39m\n",
+       "\u001b[36m   3  3  3\u001b[39m\n",
+       "\n",
+       "\u001b[36m  repeat(A::AbstractArray; inner=ntuple(Returns(1), ndims(A)), outer=ntuple(Returns(1), ndims(A)))\u001b[39m\n",
+       "\n",
+       "  Construct an array by repeating the entries of \u001b[36mA\u001b[39m. The i-th element of \u001b[36minner\u001b[39m\n",
+       "  specifies the number of times that the individual entries of the i-th\n",
+       "  dimension of \u001b[36mA\u001b[39m should be repeated. The i-th element of \u001b[36mouter\u001b[39m specifies the\n",
+       "  number of times that a slice along the i-th dimension of \u001b[36mA\u001b[39m should be\n",
+       "  repeated. If \u001b[36minner\u001b[39m or \u001b[36mouter\u001b[39m are omitted, no repetition is performed.\n",
+       "\n",
+       "\u001b[1m  Examples\u001b[22m\n",
+       "\u001b[1m  ≡≡≡≡≡≡≡≡≡≡\u001b[22m\n",
+       "\n",
+       "\u001b[36m  julia> repeat(1:2, inner=2)\u001b[39m\n",
+       "\u001b[36m  4-element Vector{Int64}:\u001b[39m\n",
+       "\u001b[36m   1\u001b[39m\n",
+       "\u001b[36m   1\u001b[39m\n",
+       "\u001b[36m   2\u001b[39m\n",
+       "\u001b[36m   2\u001b[39m\n",
+       "\u001b[36m  \u001b[39m\n",
+       "\u001b[36m  julia> repeat(1:2, outer=2)\u001b[39m\n",
+       "\u001b[36m  4-element Vector{Int64}:\u001b[39m\n",
+       "\u001b[36m   1\u001b[39m\n",
+       "\u001b[36m   2\u001b[39m\n",
+       "\u001b[36m   1\u001b[39m\n",
+       "\u001b[36m   2\u001b[39m\n",
+       "\u001b[36m  \u001b[39m\n",
+       "\u001b[36m  julia> repeat([1 2; 3 4], inner=(2, 1), outer=(1, 3))\u001b[39m\n",
+       "\u001b[36m  4×6 Matrix{Int64}:\u001b[39m\n",
+       "\u001b[36m   1  2  1  2  1  2\u001b[39m\n",
+       "\u001b[36m   1  2  1  2  1  2\u001b[39m\n",
+       "\u001b[36m   3  4  3  4  3  4\u001b[39m\n",
+       "\u001b[36m   3  4  3  4  3  4\u001b[39m\n",
+       "\n",
+       "\u001b[36m  repeat(s::AbstractString, r::Integer)\u001b[39m\n",
+       "\n",
+       "  Repeat a string \u001b[36mr\u001b[39m times. This can be written as \u001b[36ms^r\u001b[39m.\n",
+       "\n",
+       "  See also \u001b[36m^\u001b[39m.\n",
+       "\n",
+       "\u001b[1m  Examples\u001b[22m\n",
+       "\u001b[1m  ≡≡≡≡≡≡≡≡≡≡\u001b[22m\n",
+       "\n",
+       "\u001b[36m  julia> repeat(\"ha\", 3)\u001b[39m\n",
+       "\u001b[36m  \"hahaha\"\u001b[39m\n",
+       "\n",
+       "\u001b[36m  repeat(c::AbstractChar, r::Integer) -> String\u001b[39m\n",
+       "\n",
+       "  Repeat a character \u001b[36mr\u001b[39m times. This can equivalently be accomplished by calling\n",
+       "  \u001b[36mc^r\u001b[39m.\n",
+       "\n",
+       "\u001b[1m  Examples\u001b[22m\n",
+       "\u001b[1m  ≡≡≡≡≡≡≡≡≡≡\u001b[22m\n",
+       "\n",
+       "\u001b[36m  julia> repeat('A', 3)\u001b[39m\n",
+       "\u001b[36m  \"AAA\"\u001b[39m"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@doc repeat "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.9.3",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.9"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.9.3"
   }
  },
  "nbformat": 4,
