--- a/2 - Data structures.ipynb
+++ b/2 - Data structures.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -136,9 +136,8 @@
        "(bird = \"penguins\", mammal = \"cats\", marsupial = \"sugargliders\")"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -154,22 +153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"penguins\""
+       "\"sugargliders\""
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "myfavoriteanimals[1]"
+    "myfavoriteanimals[3]"
    ]
   },
   {
@@ -181,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -190,9 +188,8 @@
        "\"penguins\""
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -217,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -228,9 +225,8 @@
        "  \"Ghostbusters\" => \"555-2368\""
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -246,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -255,9 +251,8 @@
        "\"867-5309\""
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -273,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -282,9 +277,8 @@
        "\"555-FILK\""
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -300,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -312,9 +306,8 @@
        "  \"Ghostbusters\" => \"555-2368\""
       ]
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -330,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -339,9 +332,8 @@
        "\"555-FILK\""
       ]
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -350,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -361,9 +353,8 @@
        "  \"Ghostbusters\" => \"555-2368\""
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -379,25 +370,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
+     "ename": "KeyError",
      "evalue": "KeyError: key 1 not found",
      "output_type": "error",
      "traceback": [
-      "KeyError: key 1 not found",
-      "",
-      "Stacktrace:",
-      " [1] getindex(h::Dict{String, String}, key::Int64)",
-      "   @ Base ./dict.jl:482",
-      " [2] top-level scope",
-      "   @ In[13]:1",
-      " [3] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
+      "KeyError: key 1 not found\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] getindex(h::Dict{String, String}, key::Int64)\n",
+      "   @ Base .\\dict.jl:484\n",
+      " [2] top-level scope\n",
+      "   @ c:\\Users\\lolod\\Desktop\\EPFL\\BA5\\ML\\Introduction-to-Julia\\2 - Data structures.ipynb:1"
      ]
     }
    ],
@@ -432,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -446,9 +433,8 @@
        " \"Marshall\""
       ]
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -471,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -487,9 +473,8 @@
        " 13"
       ]
      },
-     "execution_count": 15,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -498,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -513,9 +498,8 @@
        "  \"Robyn\""
       ]
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -531,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -540,9 +524,8 @@
        "\"Barney\""
       ]
      },
-     "execution_count": 17,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -558,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -567,9 +550,8 @@
        "\"Baby Bop\""
       ]
      },
-     "execution_count": 18,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -594,13 +576,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8-element Vector{Int64}:\n",
+       "10-element Vector{Int64}:\n",
        "  1\n",
        "  1\n",
        "  2\n",
@@ -608,12 +590,13 @@
        "  5\n",
        "  8\n",
        " 13\n",
+       " 21\n",
+       " 21\n",
        " 21"
       ]
      },
-     "execution_count": 19,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -629,18 +612,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "21"
+       "13"
       ]
      },
-     "execution_count": 20,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -649,25 +631,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7-element Vector{Int64}:\n",
+       "6-element Vector{Int64}:\n",
        "  1\n",
        "  1\n",
        "  2\n",
        "  3\n",
        "  5\n",
-       "  8\n",
-       " 13"
+       " 21"
       ]
      },
-     "execution_count": 21,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -685,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -696,9 +676,8 @@
        " [\"penguins\", \"cats\", \"sugargliders\"]"
       ]
      },
-     "execution_count": 22,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -707,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -719,9 +698,8 @@
        " [6, 7, 8, 9]"
       ]
      },
-     "execution_count": 23,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -737,22 +715,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "4×3 Matrix{Float64}:\n",
-       " 0.392655  0.340897  0.736004\n",
-       " 0.887521  0.625563  0.225457\n",
-       " 0.123646  0.215211  0.435754\n",
-       " 0.563704  0.564539  0.0301484"
+       " 0.275995    0.0137948  0.469925\n",
+       " 0.687346    0.186843   0.206018\n",
+       " 0.00342038  0.856335   0.707017\n",
+       " 0.957324    0.239541   0.856831"
       ]
      },
-     "execution_count": 24,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -761,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -769,21 +746,20 @@
       "text/plain": [
        "4×3×2 Array{Float64, 3}:\n",
        "[:, :, 1] =\n",
-       " 0.855458  0.180741   0.480692\n",
-       " 0.888806  0.852159   0.62636\n",
-       " 0.708986  0.0526796  0.779808\n",
-       " 0.499323  0.18727    0.0843665\n",
+       " 0.954556  0.416208  0.693963\n",
+       " 0.600156  0.305339  0.307043\n",
+       " 0.609085  0.795409  0.296752\n",
+       " 0.61859   0.602826  0.109692\n",
        "\n",
        "[:, :, 2] =\n",
-       " 0.641847  0.292116  0.0178846\n",
-       " 0.359826  0.9608    0.245789\n",
-       " 0.746938  0.389501  0.944762\n",
-       " 0.386954  0.391897  0.0875665"
+       " 0.0241267  0.765505  0.564756\n",
+       " 0.8757     0.34304   0.905354\n",
+       " 0.672687   0.961914  0.419431\n",
+       " 0.105679   0.100104  0.0858402"
       ]
      },
-     "execution_count": 25,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -799,25 +775,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7-element Vector{Int64}:\n",
+       "6-element Vector{Int64}:\n",
        "  1\n",
        "  1\n",
        "  2\n",
        "  3\n",
        "  5\n",
-       "  8\n",
-       " 13"
+       " 21"
       ]
      },
-     "execution_count": 26,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -826,25 +800,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7-element Vector{Int64}:\n",
+       "6-element Vector{Int64}:\n",
        "  1\n",
        "  1\n",
        "  2\n",
        "  3\n",
        "  5\n",
-       "  8\n",
-       " 13"
+       " 21"
       ]
      },
-     "execution_count": 27,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -853,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -862,9 +834,8 @@
        "404"
       ]
      },
-     "execution_count": 28,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -873,25 +844,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7-element Vector{Int64}:\n",
+       "6-element Vector{Int64}:\n",
        " 404\n",
        "   1\n",
        "   2\n",
        "   3\n",
        "   5\n",
-       "   8\n",
-       "  13"
+       "  21"
       ]
      },
-     "execution_count": 29,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1037,14 +1006,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a_ray = [1, 2, 3]\n",
+    "\n",
+    "push!(a_ray, 4)\n",
+    "\n",
+    "pop!(a_ray)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1098,14 +1083,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, Any} with 2 entries:\n",
+       "  \"Jenny\"        => 8675309\n",
+       "  \"Ghostbusters\" => \"555-2368\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "flexible_phonebook = Dict(\"Jenny\" => 8675309, \"Ghostbusters\" => \"555-2368\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1135,14 +1134,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "911"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "flexible_phonebook[\"Emergency\"] = 911"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1164,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1202,15 +1213,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.9.3",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.9"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.9.3"
   }
  },
  "nbformat": 4,
