--- a/3 - Loops.ipynb
+++ b/3 - Loops.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,9 +51,8 @@
        "10"
       ]
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -190,9 +189,8 @@
        " 0  0  0  0  0"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -202,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -216,9 +214,8 @@
        " 6  7  8  9  10"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -334,10 +331,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100-element Vector{Int64}:\n",
+       "     1\n",
+       "     4\n",
+       "     9\n",
+       "    16\n",
+       "    25\n",
+       "    36\n",
+       "    49\n",
+       "    64\n",
+       "    81\n",
+       "   100\n",
+       "     ⋮\n",
+       "  8464\n",
+       "  8649\n",
+       "  8836\n",
+       "  9025\n",
+       "  9216\n",
+       "  9409\n",
+       "  9604\n",
+       "  9801\n",
+       " 10000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "square = [i^2 for i in 1:100]\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -353,14 +382,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares = Dict()\n",
+    "for i in 1:100\n",
+    "    square = i^2\n",
+    "    squares[i] = square\n",
+    "end\n",
+    "\n",
+    "\n",
+    "println(squares[10])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -422,15 +468,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.9.3",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.9"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.9.3"
   }
  },
  "nbformat": 4,
