--- a/5 - Functions.ipynb
+++ b/5 - Functions.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -54,9 +54,8 @@
        "f (generic function with 1 method)"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -313,21 +312,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3×3 Matrix{Float64}:\n",
-       " 0.983045  0.336857  0.21284\n",
-       " 0.102728  0.711431  0.817376\n",
-       " 0.504421  0.681324  0.833934"
+       " 0.218918  0.753122  0.0037671\n",
+       " 0.708199  0.997142  0.768711\n",
+       " 0.997962  0.564465  0.879378"
       ]
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -337,21 +335,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3×3 Matrix{Float64}:\n",
-       " 1.10834   0.715809  0.662064\n",
-       " 0.586371  1.09764   1.28501\n",
-       " 0.986512  1.22281   1.3597"
+       " 0.585045  0.917968  0.583071\n",
+       " 1.62836   1.96156   1.44517\n",
+       " 1.49581   1.81082   1.21098"
       ]
      },
-     "execution_count": 15,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -394,21 +391,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3-element Vector{Float64}:\n",
-       " 0.1488599996403983\n",
-       " 0.5795662436976401\n",
-       " 0.12786532477145474"
+       " 0.5677003409587021\n",
+       " 0.1853859217763264\n",
+       " 0.6056853661082304"
       ]
      },
-     "execution_count": 17,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -417,29 +413,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching ^(::Vector{Int64}, ::Int64)\n\u001b[0mClosest candidates are:\n\u001b[0m  ^(\u001b[91m::Union{AbstractChar, AbstractString}\u001b[39m, ::Integer) at strings/basic.jl:718\n\u001b[0m  ^(\u001b[91m::LinearAlgebra.Symmetric{var\"#s832\", S} where {var\"#s832\"<:Real, S<:(AbstractMatrix{var\"#s832\"} where var\"#s832\"<:var\"#s832\")}\u001b[39m, ::Integer) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:868\n\u001b[0m  ^(\u001b[91m::LinearAlgebra.Symmetric{var\"#s832\", S} where {var\"#s832\"<:Complex, S<:(AbstractMatrix{var\"#s832\"} where var\"#s832\"<:var\"#s832\")}\u001b[39m, ::Integer) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:869\n\u001b[0m  ...",
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching ^(::Vector{Float64}, ::Int64)\n\nClosest candidates are:\n  ^(!Matched::Union{AbstractChar, AbstractString}, ::Integer)\n   @ Base strings\\basic.jl:733\n  ^(!Matched::LinearAlgebra.UniformScaling, ::Number)\n   @ LinearAlgebra C:\\Users\\lolod\\.julia\\juliaup\\julia-1.9.3+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.9\\LinearAlgebra\\src\\uniformscaling.jl:317\n  ^(!Matched::LinearAlgebra.Symmetric{var\"#s972\", S} where {var\"#s972\"<:Real, S<:(AbstractMatrix{<:var\"#s972\"})}, ::Integer)\n   @ LinearAlgebra C:\\Users\\lolod\\.julia\\juliaup\\julia-1.9.3+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.9\\LinearAlgebra\\src\\symmetric.jl:675\n  ...\n",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching ^(::Vector{Int64}, ::Int64)\n\u001b[0mClosest candidates are:\n\u001b[0m  ^(\u001b[91m::Union{AbstractChar, AbstractString}\u001b[39m, ::Integer) at strings/basic.jl:718\n\u001b[0m  ^(\u001b[91m::LinearAlgebra.Symmetric{var\"#s832\", S} where {var\"#s832\"<:Real, S<:(AbstractMatrix{var\"#s832\"} where var\"#s832\"<:var\"#s832\")}\u001b[39m, ::Integer) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:868\n\u001b[0m  ^(\u001b[91m::LinearAlgebra.Symmetric{var\"#s832\", S} where {var\"#s832\"<:Complex, S<:(AbstractMatrix{var\"#s832\"} where var\"#s832\"<:var\"#s832\")}\u001b[39m, ::Integer) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:869\n\u001b[0m  ...",
-      "",
-      "Stacktrace:",
-      " [1] macro expansion",
-      "   @ ./none:0 [inlined]",
-      " [2] literal_pow",
-      "   @ ./none:0 [inlined]",
-      " [3] f(x::Vector{Int64})",
-      "   @ Main ./In[2]:2",
-      " [4] top-level scope",
-      "   @ In[22]:2",
-      " [5] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [6] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
+      "MethodError: no method matching ^(::Vector{Float64}, ::Int64)\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  ^(!Matched::Union{AbstractChar, AbstractString}, ::Integer)\n",
+      "   @ Base strings\\basic.jl:733\n",
+      "  ^(!Matched::LinearAlgebra.UniformScaling, ::Number)\n",
+      "   @ LinearAlgebra C:\\Users\\lolod\\.julia\\juliaup\\julia-1.9.3+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.9\\LinearAlgebra\\src\\uniformscaling.jl:317\n",
+      "  ^(!Matched::LinearAlgebra.Symmetric{var\"#s972\", S} where {var\"#s972\"<:Real, S<:(AbstractMatrix{<:var\"#s972\"})}, ::Integer)\n",
+      "   @ LinearAlgebra C:\\Users\\lolod\\.julia\\juliaup\\julia-1.9.3+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.9\\LinearAlgebra\\src\\symmetric.jl:675\n",
+      "  ...\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] literal_pow\n",
+      "   @ .\\intfuncs.jl:338 [inlined]\n",
+      " [2] f(x::Vector{Float64})\n",
+      "   @ Main c:\\Users\\lolod\\Desktop\\EPFL\\BA5\\ML\\Introduction-to-Julia\\5 - Functions.ipynb:2\n",
+      " [3] top-level scope\n",
+      "   @ c:\\Users\\lolod\\Desktop\\EPFL\\BA5\\ML\\Introduction-to-Julia\\5 - Functions.ipynb:2"
      ]
     }
    ],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -473,9 +473,8 @@
        " 2"
       ]
      },
-     "execution_count": 23,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -484,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -496,9 +495,8 @@
        " 5"
       ]
      },
-     "execution_count": 24,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -507,21 +505,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3-element Vector{Int64}:\n",
+       " 2\n",
        " 3\n",
-       " 5\n",
-       " 2"
+       " 5"
       ]
      },
-     "execution_count": 25,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -539,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -551,9 +548,8 @@
        " 5"
       ]
      },
-     "execution_count": 26,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -562,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -574,9 +570,8 @@
        " 5"
       ]
      },
-     "execution_count": 27,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -765,6 +760,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Int64}:\n",
+       " 3  2   4\n",
+       " 6  4   8\n",
+       " 9  6  12"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "[1,2,3].*[3,2,4]'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -793,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -805,9 +822,8 @@
        " 7  8  9"
       ]
      },
-     "execution_count": 33,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -816,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -828,9 +844,8 @@
        " 102  126  150"
       ]
      },
-     "execution_count": 34,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -851,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -863,9 +878,8 @@
        " 49  64  81"
       ]
      },
-     "execution_count": 35,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -883,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -895,9 +909,8 @@
        " 21.0  24.0  27.0"
       ]
      },
-     "execution_count": 36,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -913,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -925,9 +938,8 @@
        " 21.0  24.0  27.0"
       ]
      },
-     "execution_count": 37,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -953,10 +965,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "add_one (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "add_one(x) = x + 1"
+   ]
   },
   {
    "cell_type": "code",
@@ -1066,15 +1090,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.9.3",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.9"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.9.3"
   }
  },
  "nbformat": 4,
