--- a/6 - Packages.ipynb
+++ b/6 - Packages.ipynb
@@ -35,15 +35,54 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/General`\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m git-repo `https://github.com/JuliaRegistries/General.git`\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/JuliaPOMDP`\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m git-repo `https://github.com/JuliaPOMDP/Registry`\n",
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `~/Desktop/Introduction-to-Julia/Project.toml`\n",
-      " \u001b[90m [7876af07] \u001b[39m\u001b[92m+ Example v0.5.3\u001b[39m\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `~/Desktop/Introduction-to-Julia/Manifest.toml`\n",
-      " \u001b[90m [7876af07] \u001b[39m\u001b[92m+ Example v0.5.3\u001b[39m\n"
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `C:\\Users\\lolod\\.julia\\registries\\General.toml`\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m   Installed\u001b[22m\u001b[39m Example ─ v0.5.3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `C:\\Users\\lolod\\.julia\\environments\\v1.9\\Project.toml`\n",
+      "  \u001b[90m[7876af07] \u001b[39m\u001b[92m+ Example v0.5.3\u001b[39m\n",
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `C:\\Users\\lolod\\.julia\\environments\\v1.9\\Manifest.toml`\n",
+      "  \u001b[90m[7876af07] \u001b[39m\u001b[92m+ Example v0.5.3\u001b[39m"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "project...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m  ✓ \u001b[39mExample\n",
+      "  1 dependency successfully precompiled in 3 seconds. 58 already precompiled.\n"
      ]
     }
    ],
@@ -130,15 +169,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using Colors"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -147,7 +177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import Colors as clr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -274,13 +313,7 @@
        " RGB{N0f8}(0.675,0.0,0.278)\n",
        " RGB{N0f8}(0.0,1.0,0.784)\n",
        " RGB{N0f8}(0.0,0.392,0.408)\n",
-       " RGB{N0f8}(1.0,0.835,0.769)\n",
-       " RGB{N0f8}(0.424,0.322,0.0)\n",
-       " RGB{N0f8}(0.478,0.459,0.506)\n",
        " ⋮\n",
-       " RGB{N0f8}(0.0,0.557,0.58)\n",
-       " RGB{N0f8}(0.792,0.675,0.318)\n",
-       " RGB{N0f8}(0.471,0.482,0.231)\n",
        " RGB{N0f8}(0.714,0.976,0.851)\n",
        " RGB{N0f8}(0.855,0.0,0.247)\n",
        " RGB{N0f8}(0.18,0.129,0.141)\n",
@@ -292,13 +325,12 @@
        " RGB{N0f8}(0.6,0.435,0.239)"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "palette = distinguishable_colors(100)"
+    "palette = clr.distinguishable_colors(100)"
    ]
   },
   {
@@ -310,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -323,27 +355,26 @@
        "     width=\"75mm\" height=\"75mm\"\n",
        "     viewBox=\"0 0 3 3\" preserveAspectRatio=\"none\"\n",
        "     shape-rendering=\"crispEdges\" stroke=\"none\">\n",
-       "<rect width=\".96\" height=\".96\" x=\"0\" y=\"0\" fill=\"#485C00\" />\n",
-       "<rect width=\".96\" height=\".96\" x=\"1\" y=\"0\" fill=\"#FF9BB0\" />\n",
-       "<rect width=\".96\" height=\".96\" x=\"2\" y=\"0\" fill=\"#CAAC51\" />\n",
-       "<rect width=\".96\" height=\".96\" x=\"0\" y=\"1\" fill=\"#B5FF4E\" />\n",
-       "<rect width=\".96\" height=\".96\" x=\"1\" y=\"1\" fill=\"#44005C\" />\n",
-       "<rect width=\".96\" height=\".96\" x=\"2\" y=\"1\" fill=\"#00C3C6\" />\n",
-       "<rect width=\".96\" height=\".96\" x=\"0\" y=\"2\" fill=\"#C8C2B5\" />\n",
-       "<rect width=\".96\" height=\".96\" x=\"1\" y=\"2\" fill=\"#687B7A\" />\n",
-       "<rect width=\".96\" height=\".96\" x=\"2\" y=\"2\" fill=\"#FED206\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"0\" y=\"0\" fill=\"#FFBC80\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"1\" y=\"0\" fill=\"#485C00\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"2\" y=\"0\" fill=\"#B39688\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"0\" y=\"1\" fill=\"#AC0047\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"1\" y=\"1\" fill=\"#BB8FA8\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"2\" y=\"1\" fill=\"#290001\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"0\" y=\"2\" fill=\"#009E88\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"1\" y=\"2\" fill=\"#009E88\" />\n",
+       "<rect width=\".96\" height=\".96\" x=\"2\" y=\"2\" fill=\"#003200\" />\n",
        "</svg>"
       ],
       "text/plain": [
        "3×3 Array{RGB{N0f8},2} with eltype RGB{FixedPointNumbers.N0f8}:\n",
-       " RGB{N0f8}(0.282,0.361,0.0)   …  RGB{N0f8}(0.792,0.675,0.318)\n",
-       " RGB{N0f8}(0.71,1.0,0.306)       RGB{N0f8}(0.0,0.765,0.776)\n",
-       " RGB{N0f8}(0.784,0.761,0.71)     RGB{N0f8}(0.996,0.824,0.024)"
+       " RGB{N0f8}(1.0,0.737,0.502)  …  RGB{N0f8}(0.702,0.588,0.533)\n",
+       " RGB{N0f8}(0.675,0.0,0.278)     RGB{N0f8}(0.161,0.0,0.004)\n",
+       " RGB{N0f8}(0.0,0.62,0.533)      RGB{N0f8}(0.0,0.196,0.0)"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -366,13 +397,6 @@
     "#### 7.1 \n",
     "Load the Primes package (source code at https://github.com/JuliaMath/Primes.jl )."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -436,15 +460,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.9.3",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.9"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.0"
+   "version": "1.9.3"
   }
  },
  "nbformat": 4,
